--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -62,6 +62,24 @@ p
     text-transform: uppercase
     &:hover
         background-color: lighten($black-color, 40%)
+.btn-main-small
+    padding: .3rem .5rem
+    font-family: $main-font
+    font-weight: 700
+    font-size: 1rem
+    border-radius: none
+    background-color: $black-color
+    color: #fff
+    display: inline-block
+    text-align: center
+    text-decoration: none
+    vertical-align: middle
+    cursor: pointer
+    transition: .3s
+    text-transform: uppercase
+    &:hover
+        background-color: lighten($black-color, 40%)
+
 .navbar-toggler
     border-radius: unset
     border: none
@@ -197,6 +215,7 @@ body
             margin-right: 10px
             margin-bottom: 10px
 .widget-profile
+    margin-bottom: 0
     .row
         .col-md-4
 
@@ -304,7 +323,7 @@ body
                     color: rgba(0, 0, 0, .2)
 .comments
     .comment
-        margin: 30px 0 30px 0
+        margin: 10px 0 30px 0
         box-shadow: 2px 2px 8px 2px rgb(0 0 0 / 10%)
         .user-image
             margin-right: 10px
