--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -321,6 +321,26 @@ body
                     position: absolute
                     font-size: 70px
                     color: rgba(0, 0, 0, .2)
+blockquote
+    margin-bottom: 1rem
+    font-size: .75rem
+    font-style: italic
+    background-color: #fff
+    border-left: 0.7rem solid #007bff
+    margin: 1.5em 0.7rem
+    padding: 0.5em 0.7rem
+    margin: 0 0 1rem
+    display: block
+    margin-block-start: 1em
+    margin-block-end: 1em
+    margin-inline-start: 40px
+    margin-inline-end: 40px
+
+    &*::after, ::before
+        box-sizing: border-box
+
+
+
 .comments
     .comment
         margin: 10px 0 30px 0
