--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -46,6 +46,7 @@ p
     line-height: 19px
     color: $main-color
 .btn-main
+    border: none
     padding: 0.5rem 2rem
     font-family: $main-font
     font-weight: 700
