about page full

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -179,6 +179,8 @@ body
 .widget
     margin-bottom: 50px
 .widget-latast-posts
+    strong
+        font-size: .7rem !important
     .post-card-small
         .post-card-image
             margin-right: 30px
