--- a/public/front/sass/main.sass
+++ b/public/front/sass/main.sass
@@ -30,14 +30,14 @@ h4
 	line-height: 22px
 	color: $heading-color
 	letter-spacing: $spacing
-	text-transform: uppercase	
+	text-transform: uppercase
 h5
 	font-family: $main-font
 	font-weight: 700
 	font-size: 14px
 	line-height: 1.2em
 	color: $black-color
-	letter-spacing: $spacing	
+	letter-spacing: $spacing
 	margin-bottom: 0
 p
 	font-family: $main-font
@@ -75,12 +75,12 @@ p
 	padding: 0
 	margin-bottom: 20px
 	li
-		list-style-type: none	
+		list-style-type: none
 		margin-right: 20px
 		color: $light-text
 		a
 			text-decoration: none
-			color: $light-text	
+			color: $light-text
 .logo
 	a
 		font-family: $logo-font
@@ -89,7 +89,7 @@ p
 		font-size: 32px
 		line-height: 40px
 		text-transform: uppercase
-		text-decoration: none		
+		text-decoration: none
 body
 	font-family: $main-font
 	// font-family: $logo-font
@@ -110,7 +110,7 @@ body
 				color: $heading-color
 				&:hover
 					color: lighten($black-color, 40%)
-	
+
 		.login
 			.top-menu
 				a
@@ -118,13 +118,13 @@ body
 					font-weight: 400
 					font-size: 18px
 					line-height: 25px
-					color: $heading-color	
+					color: $heading-color
 				select
 					font-family: $main-font
 					font-weight: 400
 					font-size: 18px
 					line-height: 25px
-					color: $heading-color	
+					color: $heading-color
 					border-radius: unset
 .menu
 	.navbar
@@ -138,7 +138,7 @@ body
 	h2
 		margin-top: 20px
 		margin-bottom: 20px
-	
+
 .widget
 	margin-bottom: 50px
 .widget-latast-posts
@@ -150,6 +150,9 @@ body
 			overflow: hidden
 			img
 				width: 100%
+.widget-latest-posts
+    .category-article
+        font-size: .7rem !important
 .widget-category,.widget-links
 	ul
 		margin: 0
@@ -181,12 +184,12 @@ body
 .widget-profile
 	.row
 		.col-md-4
-			
+
 			img
 				width: 100%
 				max-width: 126px
 
-.info-box 
+.info-box
 	box-shadow: 0 0 1px rgb(0 0 0 / 13%), 0 1px 3px rgb(0 0 0 / 20%)
 	border-radius: 0.25rem
 	background-color: #fff
@@ -198,7 +201,7 @@ body
 	position: relative
 	width: 100%
 	color: #fff
-	
+
 	display: flex
 	justify-content: space-between
 	.info-box-icon
@@ -209,16 +212,16 @@ body
 		width: 65%
 		.info-box-text
 			font-size: 1.5rem
-			font-weight: bold	
+			font-weight: bold
 		.info-box-number
 			font-size: .75rem
 			font-weight: 300
 		.progress
-			height: .2rem	
+			height: .2rem
 		.progress-description
 			font-size: .75rem
 			font-weight: 300
-		
+
 
 .footer
 	padding: 50px 0 50px 0
@@ -229,16 +232,16 @@ body
 			font-size: 16px
 			margin-right: 20px
 			&:last-child
-				margin-right: 0	
+				margin-right: 0
 	.logo-footer
 		margin-bottom: 30px
-		
+
 		a
 			font-family: $logo-font
 			font-weight: 700
 			font-size: 32px
 			line-height: 40px
-			color: $black-color	
+			color: $black-color
 			text-decoration: none
 			text-transform: uppercase
 	.footer-menu
@@ -250,12 +253,12 @@ body
 				margin-right: 0
 			.nav-link
 				text-decoration: none
-				color: $heading-color	
+				color: $heading-color
 	.copyright-text
 		color: $light-text
 		a
 			text-decoration: none
-			color: $light-text	
+			color: $light-text
 .page-header
 	background-color: $light-color
 .post-card-single
@@ -263,7 +266,7 @@ body
 		box-sizing: border-box
 		img
 			width: 100%
-	.post-content		
+	.post-content
 		.quote
 			display: flex
 			align-items: center
@@ -273,18 +276,18 @@ body
 				width: 10px
 				height: 150px
 				background-color: $black-color
-				margin-right: 30px	
+				margin-right: 30px
 			.quote-content
 				display: flex
 				flex-direction: column
 				p
 					font-size: 16px
-					color: $black-color 
+					color: $black-color
 					font-style: oblique
 				.fa-quote-right
 					position: absolute
 					font-size: 70px
-					color: rgba(0, 0, 0, .2)	
+					color: rgba(0, 0, 0, .2)
 .comments
 	.comment
 		margin: 30px 0 30px 0
@@ -294,7 +297,7 @@ body
 		.user-meta
 			color: $light-text
 			font-size: 14px
-			font-weight: 300					
+			font-weight: 300
 .signin-page
 	margin: 100px 0 100px
 	.block
@@ -334,11 +337,11 @@ body
 		margin: 0
 		padding: 0
 		margin-bottom: 20px
-		list-style-type: none	
+		list-style-type: none
 		.fas
 			color: $main-color
 		span
-			margin-left: 10px	
+			margin-left: 10px
 	.social-icon
 		ul
 			margin: 0
@@ -350,5 +353,5 @@ body
 				&:last-child
 					margin-right: 0
 				a
-					color: $main-color		
-@import 'media'						
+					color: $main-color
+@import 'media'
