add tranclate contact-form

--- a/resources/sass/_main.sass
+++ b/resources/sass/_main.sass
@@ -1,4 +1,3 @@
-@import '_app'
 @import '_fonts'
 @import '_vars'
 
@@ -339,7 +338,7 @@ blockquote
     margin-inline-start: 40px
     margin-inline-end: 40px
 
-    &*::after, ::before
+    &::after, ::before
         box-sizing: border-box
 
 
