--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,10 +1,11 @@
 // Fonts
 @import url('https://fonts.bunny.net/css?family=Nunito');
-
 // Variables
 @import 'variables';
 
-@import 'media';
+
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+@import 'main';
+@import 'media';
