refaactoring articles store and update

--- a/resources/sass/_media.sass
+++ b/resources/sass/_media.sass
@@ -43,3 +43,11 @@
                     font-size: 12px
                 a
                     font-size: 12px
+    footer
+        .footer-menu
+            flex-direction: column
+            justify-content: center
+            text-align: center
+            padding-left: 0
+            .nav-item
+                margin-right: 0!important
