--- a/public/front/sass/_media.sass
+++ b/public/front/sass/_media.sass
@@ -2,7 +2,7 @@
 	.top-header
 		.login
 			.top-menu
-				.nav-item	
+				.nav-item
 					select
 						font-size: 16px
 					.nav-link
@@ -44,4 +44,13 @@
 				a
 					font-size: 12px
 
-	
+    footer
+        .footer-menu
+            flex-direction: column
+            justify-content: center
+            text-align: center
+            padding-left: 0
+            .nav-item
+                margin-right: 0!important
+
+
